--- a/development/index.html
+++ b/development/index.html
@@ -27,7 +27,7 @@
 
         <nav class="page-nav">
           <ul class="page-nav__list">
-            <li class="page-nav__item active"><a href="/app.html" class="page-nav__link">Zaplanuj posiłki</a></li>
+            <li class="page-nav__item active"><a href="/foodie-calendar/development/app.html" class="page-nav__link">Zaplanuj posiłki</a></li>
             <li class="page-nav__item"><a href="#aboutapp" class="page-nav__link">Dlaczego warto?</a></li>
             <li class="page-nav__item"><a href="#about" class="page-nav__link">O mnie</a></li>
             <li class="page-nav__item"><a href="#contact" class="page-nav__link">Kontakt</a></li>
